fix: adjust functional page pill in desktop so it doesn't get cropped

--- a/src/Components/Functional/Functional.css
+++ b/src/Components/Functional/Functional.css
@@ -580,8 +580,11 @@
   }
 
   .functional-pill-position {
-    top: 250px;
-    left: 1150px;
+    /* top: 250px;
+    left: 1150px; */
+
+    margin-left: 70%;
+    margin-right: 70%;
   }
   .functional-checked-info-header {
     text-align: left !important;
